--- a/mypapers.bib
+++ b/mypapers.bib
@@ -138,7 +138,7 @@ keywords = {Parser Assurance}
   Booktitle                = {Network and Distributed System Security Symposium (NDSS)},
   Year                     = {2021},
   Url_Paper                = {http://www.cse.psu.edu/~gxt29/papers/cfgByDatalog_NDSS21.pdf},
-  keywords = {Software Security(Inlined Reference Monitors (CFI; SFI; etc.))}
+  keywords = {Software Security: Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @article{Singh21SPX,
