--- a/mypapers.bib
+++ b/mypapers.bib
@@ -24,7 +24,7 @@
   Booktitle                = {Network and Distributed System Security Symposium (NDSS)},
   Year                     = {2022},
   url_Paper = {https://www.cse.psu.edu/~trj1/papers/huang-ndss22.pdf},
-  keywords  = {Software Security--Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords  = {Software Security---Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @InProceedings{Kan21Sdft,
@@ -78,7 +78,7 @@
   pages     = {162--176},
   year      = {2021},
   url_Paper = {https://dl.acm.org/doi/abs/10.1145/3471621.3471847},
-  keywords = {Software Security--Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security---Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @article{Fan21JPDC,
@@ -138,7 +138,7 @@ keywords = {Parser Assurance}
   Booktitle                = {Network and Distributed System Security Symposium (NDSS)},
   Year                     = {2021},
   Url_Paper                = {http://www.cse.psu.edu/~gxt29/papers/cfgByDatalog_NDSS21.pdf},
-  keywords = {Software Security: Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security---Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @article{Singh21SPX,
