--- a/mypapers.bib
+++ b/mypapers.bib
@@ -24,7 +24,7 @@
   Booktitle                = {Network and Distributed System Security Symposium (NDSS)},
   Year                     = {2022},
   url_Paper = {https://www.cse.psu.edu/~trj1/papers/huang-ndss22.pdf},
-  keywords  = {Software Security --> Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords  = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @InProceedings{Kan21Sdft,
