--- a/mypapers.bib
+++ b/mypapers.bib
@@ -78,7 +78,7 @@
   pages     = {162--176},
   year      = {2021},
   url_Paper = {https://dl.acm.org/doi/abs/10.1145/3471621.3471847},
-  keywords = {Software Security---Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Attacks}
 }
 
 @article{Fan21JPDC,
@@ -138,7 +138,7 @@ keywords = {Parser Assurance}
   Booktitle                = {Network and Distributed System Security Symposium (NDSS)},
   Year                     = {2021},
   Url_Paper                = {http://www.cse.psu.edu/~gxt29/papers/cfgByDatalog_NDSS21.pdf},
-  keywords = {Software Security---Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Binary Code Analysis}
 }
 
 @article{Singh21SPX,
@@ -397,7 +397,7 @@ title={Rapidly Mitigating Vulnerabilities with Security Workarounds},
 booktitle= {Workshop on Binary Analysis Research (BAR)},
 year={2019},
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/RVM-bar19.pdf},
-keywords  = {Software Security, Automated Program Repairs}
+keywords  = {Software Security -> Automated Program Repairs}
 }
 
 @InProceedings{BerkayTM19IoTGuard,
@@ -530,7 +530,7 @@ keywords={Side Channel Mitigation, Symbolic Execution}
   year      = {2018},
   award     = {Outstanding paper award},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/cfgConsMeta.pdf},
-  keywords = {Software Security, Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Binary Code Analysis}
 }
 
 @article{TanM18Jar,
