--- a/mypapers.bib
+++ b/mypapers.bib
@@ -397,7 +397,7 @@ title={Rapidly Mitigating Vulnerabilities with Security Workarounds},
 booktitle= {Workshop on Binary Analysis Research (BAR)},
 year={2019},
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/RVM-bar19.pdf},
-keywords  = {Software Security -> Automated Program Repairs}
+keywords  = {Software Security -> Automated Program Repairs, Software Security -> Binary Code Analysis}
 }
 
 @InProceedings{BerkayTM19IoTGuard,
@@ -477,7 +477,7 @@ keywords={Side Channel Mitigation, Symbolic Execution}
   pages     = {423--444},
   year      = {2018},
   url_Paper = {https://doi.org/10.1007/978-3-030-00470-5_20},
-  keywords = {Binary Code Security, Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Binary Code Security, Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @InProceedings{Fan18Trust,
