--- a/mypapers.bib
+++ b/mypapers.bib
@@ -42,7 +42,7 @@
   pages     = {311-322},
   year      = {2021},
   url_Paper = {https://dl.acm.org/doi/10.1145/3485832.3485900},
-  keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @article{JiaKT21deriv,
@@ -56,7 +56,7 @@
   pages     = {1--24},
   year      = {2021},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/VPLDerivParsingOopsla21.pdf},
-  keywords  = {Parser Assurance}
+  keywords  = {Formal Methods -> Parser Assurance}
 }
 
 @article{Brotzman21specsafe,
@@ -110,7 +110,7 @@ title={Bohemia: A Validator for Parser Frameworks},
 booktitle= {7th Workshop on Language-Theoretic Security (LangSec)},
 year={2021},
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/Paranjpe_LangSec21.pdf},
-keywords = {Parser Assurance}
+keywords = {Formal Methods -> Parser Assurance}
 }
 
 @InProceedings{ZengNT21Trust,
@@ -119,7 +119,7 @@ keywords = {Parser Assurance}
   Booktitle = {20th IEEE International Conference On Trust, Security And Privacy In Computing And Communications (TrustCom)},
   Pages = {To appear},
   Year = {2021},
-  keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Binary Code Analysis, Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @InProceedings{Brotzman21codaspy,
@@ -193,7 +193,7 @@ keywords = {Parser Assurance}
   pages     = {466--479},
   year      = {2020},
   url_Paper = {https://doi.org/10.1145/3427228.3427246},
-  keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @article{HuangLTJ20login,
@@ -316,7 +316,7 @@ keywords = {Parser Assurance}
   booktitle = {Annual Computer Security Applications Conference (ACSAC)},
   pages     = {584--597},
   year      = {2019},
-  keywords = {Inlined Reference Monitors (CFI; SFI; etc.)},
+  keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)},
   url_Paper = {https://doi.org/10.1145/3359789.3359806}
 }
 
@@ -477,7 +477,7 @@ keywords={Side Channel Mitigation, Symbolic Execution}
   pages     = {423--444},
   year      = {2018},
   url_Paper = {https://doi.org/10.1007/978-3-030-00470-5_20},
-  keywords = {Software Security -> Binary Code Security, Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Binary Code Analysis, Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @InProceedings{Fan18Trust,
@@ -519,7 +519,7 @@ keywords={Side Channel Mitigation, Symbolic Execution}
  pages = {25--60},
  year = {2018},
  url_Paper={https://dl.acm.org/citation.cfm?id=3129743},
- keywords = {Inlined Reference Monitors (CFI; SFI; etc.), Survey}
+ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.), Survey}
 }
 
 @InProceedings{ZengT18CFGCons,
@@ -544,7 +544,7 @@ keywords={Side Channel Mitigation, Symbolic Execution}
   number="3",
   pages="257--277",
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/bigrammar_jar.pdf},
-  keywords = {Parser Assurance}
+  keywords = {Formal Methods -> Parser Assurance}
 }
 
 @article{Tan17SFI,
@@ -557,7 +557,7 @@ keywords={Side Channel Mitigation, Symbolic Execution}
   year      = {2017},
   url_Paper = {http://doi.org/10.1561/3300000013},
   url_Slides = {http://www.cse.psu.edu/~gxt29/slides/SFI.pptx},
-  keywords = {Inlined Reference Monitors (CFI; SFI; etc.), Survey}
+  keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.), Survey}
 }
 
 @InProceedings{TanJ17Cfgform,
@@ -567,7 +567,7 @@ keywords={Side Channel Mitigation, Symbolic Execution}
   pages = {3--13},
   year = 2017,
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/formalizeCFGCons.pdf},
-  keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @InProceedings{Tian17Redroid,
@@ -625,7 +625,7 @@ keywords={Side Channel Mitigation, Symbolic Execution}
   pages     = {73--89},
   year      = {2016},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/bigrammar.pdf},
-  keywords = {Parser Assurance}
+  keywords = {Formal Methods -> Parser Assurance}
 }
 
 @article{Yin15WebC,
@@ -640,7 +640,7 @@ keywords={Side Channel Mitigation, Symbolic Execution}
   pages     = {1--15},
   year      = {2015},
   url_Paper = {https://doi.org/10.1007/s11432-015-5285-y},
-  keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @inproceedings{NiuT15PICFI,
@@ -651,7 +651,7 @@ pages = {914--926},
 year = "2015",
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/picfi.pdf},
 url_Link = {https://github.com/mcfi},
-keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @inproceedings{Muthukumaran15Hook,
@@ -664,7 +664,7 @@ keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
   pages     = {178--195},
   year      = {2015},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/essos15.pdf},
-  keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @article{Tan15JNIModelJournal,
@@ -686,7 +686,7 @@ keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
   month = {December},
   year      = {2014},
   url_Paper ={http://www.cse.psu.edu/~trj1/papers/law14.pdf},
-  keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+  keywords = {Software Security}
 }
 
 @article{LiT14Exn,
@@ -719,7 +719,7 @@ pages = {577--587},
 year = "2014",
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/mcfi.pdf},
 url_Link = {https://github.com/mcfi},
-keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
  
 @inproceedings{NiuT14RockJIT,
@@ -729,7 +729,7 @@ booktitle = {21st ACM Conference on Computer and Communications Security ({CCS})
 pages = {1317--1328},
 year = "2014",
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/rockjit.pdf},
-keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @inproceedings{SunT14NG,
@@ -768,7 +768,7 @@ booktitle = {22nd {Usenix Security} Symposium},
 pages = {369--382},
 year = "2013",
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/strato.pdf},
-keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @inproceedings{NiuT13MIP,
@@ -778,7 +778,7 @@ booktitle = {20th ACM Conference on Computer and Communications Security ({CCS})
 pages = {199--210},
 year = "2013",
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/mip.pdf},
-keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @inproceedings{NiuT13Dupro,
@@ -841,7 +841,7 @@ pages= {395--404},
 year = "2012",
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/rocksalt.pdf},
 url_Link = {https://github.com/gangtan/CPUmodels},
-keywords = {Inlined Reference Monitors (CFI; SFI; etc.), Parser Assurance}
+keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.), Formal Methods -> Parser Assurance}
 }
 
 @article{Bai11FDTL,
@@ -866,7 +866,7 @@ booktitle = {18th ACM Conference on Computer and Communications Security ({CCS})
 pages={29--40},
 year = "2011",
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/cfiDataSandboxing.pdf},
-keywords = {Inlined Reference Monitors (CFI; SFI; etc.)}
+keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @inproceedings{LiT11OOPSLA,
