--- a/mypapers.bib
+++ b/mypapers.bib
@@ -68,7 +68,7 @@
   pages     = {1--28},
   year      = {2021},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/SpecSafeOopsla21.pdf},
-  keywords = {Side Channel Mitigation}
+  keywords = {Software Security -> Side Channel Mitigation}
 }
 
 @inproceedings{Muntean21itop,
@@ -129,7 +129,7 @@ keywords = {Formal Methods -> Parser Assurance}
   pages     = {233--244},
   year      = {2021},
   Url_Paper = {http://www.cse.psu.edu/~gxt29/papers/ghostthread_codaspy21.pdf},
-  keywords = {Side Channel Mitigation}
+  keywords = {Software Security -> Side Channel Mitigation}
 }
 
 @InProceedings{Kim21BPA,
@@ -158,7 +158,7 @@ keywords = {Formal Methods -> Parser Assurance}
   pages     = {14:1--14:26},
   year      = {2021},
   Url_Paper = {https://doi.org/10.1145/3436730},
-  keywords = {Side Channel Mitigation}
+  keywords = {Software Security -> Side Channel Mitigation, Hardware Security}
 }
 
 @article{Fan20IS,
@@ -206,7 +206,7 @@ keywords = {Formal Methods -> Parser Assurance}
    month = dec,
    year = {2020},
    url_Paper = {http://www.cse.psu.edu/~gxt29/papers/patch_login21.pdf},
-   keywords  = {Automated Program Repairs}
+   keywords  = {Software Security -> Automated Program Repairs}
 }
 
 
@@ -388,7 +388,7 @@ booktitle= {IEEE Symposium on Security and Privacy (S\&P)},
 year={2019},
 pages={539--554},
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/Senx-oakland19.pdf},
-keywords  = {Automated Program Repairs}
+keywords  = {Software Security -> Automated Program Repairs}
 }
 
 @INPROCEEDINGS{HuangT19Bar,
@@ -447,7 +447,7 @@ pages = {364--380},
 booktitle= {IEEE Symposium on Security and Privacy (S\&P)},
 year={2019},
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/casym.pdf},
-keywords={Side Channel Mitigation, Symbolic Execution}
+keywords={Software Security -> Side Channel Mitigation, Software Security -> Symbolic Execution}
 }
 
 @article{Fan18IJCSE,
