--- a/mypapers.bib
+++ b/mypapers.bib
@@ -101,7 +101,7 @@ year={2021},
 pages     = {21--26},
 doi = {10.1145/3447852.3458717},
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/HuangEuroSec21.pdf},
-keywords = {Program Partitioning}
+keywords = {Software Security -> Privilege Separation}
 }
 
 @INPROCEEDINGS{ParanjpeT21LangSec,
@@ -262,7 +262,7 @@ keywords = {Formal Methods -> Parser Assurance}
   pages     = {157--171},
   year      = {2020},
   url_Paper = {https://doi.org/10.1145/3381052.3381328},
-  keywords = {Program Partitioning}
+  keywords = {Software Security -> Privilege Separation}
 }
 
 @article{Tian20JCS,
@@ -297,7 +297,7 @@ keywords = {Formal Methods -> Parser Assurance}
   pages     = {1023--1040},
   year      = {2019},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/pm_ccs19.pdf},
-  keywords = {Program Partitioning}
+  keywords = {Software Security -> Privilege Separation}
 }
 
 @inproceedings{Wang19IVT,
@@ -587,7 +587,7 @@ keywords={Software Security -> Side Channel Mitigation, Software Security -> Sym
   pages     = {2359--2371},
   year      = {2017},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/ptrsplit.pdf},
-  keywords = {Program Partitioning}
+  keywords = {Software Security -> Privilege Separation}
 }
 
 @inproceedings{Guo16Memsys,
@@ -676,7 +676,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
   pages     = {805--840},
   year      = {2015},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/jnimodel-mscs.pdf},
-  keywords = {Language Interoperation}
+  keywords = {Programming Languages -> Language Interoperation}
 }
 
 @inproceedings{Ganapathy14LA,
@@ -698,7 +698,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
   pages     = {273--297},
   year      = {2014},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/exnSCP.pdf},
-  keywords = {Language Interoperation}
+  keywords = {Programming Languages -> Language Interoperation}
 }
 
 @inproceedings{LiT14RC,
@@ -708,7 +708,7 @@ booktitle = {European Conference on Object-Oriented Programming (ECOOP)},
 pages     = {80--104},
 year = "2014",
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/refcount.pdf},
-keywords = {Language Interoperation}
+keywords = {Programming Languages -> Language Interoperation}
 }
 
 @inproceedings{NiuT14MCFI,
@@ -758,7 +758,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
   pages     = {9:1--9:28},
   year      = {2013},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/tissec13.pdf},
-  keywords = {Language Interoperation}
+  keywords = {Programming Languages -> Language Interoperation}
 }
 
 @inproceedings{Zeng13Strato,
@@ -789,7 +789,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
   year      = {2013},
   pages     = {131--142},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/dupro.pdf},
-  keywords = {Program Partitioning}
+  keywords = {Software Security -> Privilege Separation}
 }
 
 @inproceedings{Su12MSN,
@@ -809,7 +809,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
  pages = {9--20},
  year = {2012},
  url_Paper = {http://www.cse.psu.edu/~gxt29/papers/upro.pdf},
- keywords = {Program Partitioning}
+ keywords = {Software Security -> Privilege Separation}
 }
 
 @inproceedings{LiLT12JATO,
@@ -819,7 +819,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
  pages = {2--17},
  year = {2012},
  url_Paper = {http://www.cse.psu.edu/~gxt29/papers/jato.pdf},
- keywords = {Language Interoperation}
+ keywords = {Programming Languages -> Language Interoperation}
 }
 
 @inproceedings{SunT12Arabica,
@@ -830,7 +830,7 @@ pages= {842--858},
 year = "2012",
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/arabica.pdf},
 url_Link = {http://www.cse.psu.edu/~gxt29/projects/gonative/},
-keywords = {Language Interoperation}
+keywords = {Programming Languages -> Language Interoperation}
 }
 
 @inproceedings{Morrisett12RockSalt,
@@ -876,7 +876,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
  pages = {345--358},
  year = {2011},
  url_Paper = {http://www.cse.psu.edu/~gxt29/papers/jet.pdf},
- keywords = {Language Interoperation}
+ keywords = {Programming Languages -> Language Interoperation}
 }
 
 @article{Tan11WUSL,
@@ -890,7 +890,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
  publisher = {Ohmsha, Ltd. and Springer},
  address = {Japan},
  url_Paper = {http://www.cse.psu.edu/~gxt29/papers/WUSL_journal.pdf},
- keywords = {Program Verification}
+ keywords = {Formal Methods -> Program Verification}
  }
 
 @inproceedings{FedynyshynCT11ATC,
@@ -925,7 +925,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
  pages={114--130},
  year = {2010},
  url_Paper = {https://doi.org/10.1007/978-3-642-17164-2_9},
-  keywords = {Language Interoperation}
+  keywords = {Programming Languages -> Language Interoperation}
 }
 
 @inproceedings{Kim10SPIE,
@@ -946,7 +946,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
  url_Paper = {http://www.cse.psu.edu/~gxt29/papers/robusta.pdf},
  url_Link = {http://www.cse.psu.edu/~gxt29/projects/gonative/},
  url_Slides = {http://www.cse.psu.edu/~gxt29/slides/RobustaCCS2010.pdf},
- keywords = {Language Interoperation}
+ keywords = {Programming Languages -> Language Interoperation}
 }
 
 @article{FPCC10TOPLAS,
@@ -955,7 +955,7 @@ title="Semantic Foundations for Typed-Assembly Languages",
 journal={ACM Transactions on Programming Languages and Systems (TOPLAS)},
 volume=32, number=3, pages="1-67", month=mar, year=2010,
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/sftal.pdf},
-keywords = {Program Verification}
+keywords = {Formal Methods -> Program Verification}
 }
 
 @inproceedings{Tan09APLAS,
@@ -965,7 +965,7 @@ keywords = {Program Verification}
  pages={178--193},
  year = {2009},
  url_Paper = {https://doi.org/10.1007/978-3-642-10672-9_14},
- keywords = {Program Verification}
+ keywords = {Formal Methods -> Program Verification}
 }
 
 @inproceedings{Appel09Voting,
@@ -996,7 +996,7 @@ keywords = {Program Verification}
  pages={442--452},
  year = {2009},
  url_Paper = {http://www.cse.psu.edu/~gxt29/papers/exnBugCCS09.pdf},
- keywords = {Language Interoperation}
+ keywords = {Programming Languages -> Language Interoperation}
 }
 
 @inproceedings{TanC08Security,
@@ -1008,7 +1008,7 @@ keywords = {Program Verification}
    url_Paper = {http://www.cse.psu.edu/~gxt29/papers/jdksecurity.pdf},
    url_Slides = {http://www.cse.psu.edu/~gxt29/slides/jdksecurity.pdf},
    note = {[\href{http://www.cse.psu.edu/~gxt29/papers/jdksecurity_tr.pdf}{tech report}]},
-   keywords = {Language Interoperation}
+   keywords = {Programming Languages -> Language Interoperation}
 }
 
 @unpublished{Appe08VotingReport,
@@ -1028,7 +1028,7 @@ year = 2007,
 pages = {39--56},
 url_Paper = {http://www.cse.psu.edu/~gxt29/papers/ilea.pdf},
 url_Slides = {http://www.cse.psu.edu/~gxt29/slides/ILEA.pdf},
-keywords = {Language Interoperation}
+keywords = {Programming Languages -> Language Interoperation}
 }
 
 @inproceedings{TanCJ06Delayed,
@@ -1052,7 +1052,7 @@ keywords = {Language Interoperation}
   pages     = {97--106},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/safejni.pdf},
   url_Slides = {http://www.cse.psu.edu/~gxt29/slides/safejni.pdf},
-  keywords = {Language Interoperation}
+  keywords = {Programming Languages -> Language Interoperation}
 }
 
 @inproceedings{TanA06ControlLogic,
@@ -1064,7 +1064,7 @@ keywords = {Language Interoperation}
   pages     = {80--94},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/controllogic.pdf},
   url_Slides = {http://www.cse.psu.edu/~gxt29/slides/controllogic.pdf},
-  keywords = {Program Verification}
+  keywords = {Formal Methods -> Program Verification}
 }
 
 @inproceedings{Marino06MM,
@@ -1083,7 +1083,7 @@ school=PU,
 address="Princeton, NJ",
 year="2005",month=aug,
 note="Tech Report CS-TR-731-05",
-keywords = {Program Verification}
+keywords = {Formal Methods -> Program Verification}
 }
 
 @InProceedings{TanASWVMCAI04,
@@ -1097,7 +1097,7 @@ keywords = {Program Verification}
   month	       = jan,
   url_Paper    = {http://www.cse.psu.edu/~gxt29/papers/stplus.pdf},
   url_Slides   = {http://www.cse.psu.edu/~gxt29/slides/vmcai04.pdf},
-  keywords = {Program Verification}
+  keywords = {Formal Methods -> Program Verification}
 }
 
 @inproceedings{Ou04DynamicTyping,
