--- a/mypapers.bib
+++ b/mypapers.bib
@@ -168,7 +168,7 @@ keywords = {Formal Methods -> Parser Assurance}
   volume    = {561},
   pages     = {230--242},
   year      = {2021},
-  keywords={Trusted Execution Environment}
+  keywords={Systems Security -> Trusted Execution Environment}
 }
 
 @article{Fan20JNCA,
@@ -273,7 +273,7 @@ keywords = {Formal Methods -> Parser Assurance}
   pages     = {101750},
   year      = {2020},
   url_Paper = {https://doi.org/10.1016/j.cose.2020.101750},
-  keywords = {Android Security}
+  keywords = {Software Security -> Android Security}
 }
 
 @article{Tian20repack,
@@ -287,7 +287,7 @@ keywords = {Formal Methods -> Parser Assurance}
   pages     = {64--77},
   year      = {2020},
   url_Paper = {https://doi.org/10.1109/TDSC.2017.2745575},
-  keywords = {Android Security}
+  keywords = {Software Security -> Android Security}
 }
 
 @inproceedings{Liu19PM,
@@ -458,7 +458,7 @@ keywords={Software Security -> Side Channel Mitigation, Software Security -> Sym
   issue = {2},
   pages = {162--168},
   year="2018", 
-  keywords={Trusted Execution Environment}
+  keywords={Systems Security -> Trusted Execution Environment}
 }
 
 @article{Fan18FGC,
@@ -467,7 +467,7 @@ keywords={Software Security -> Side Channel Mitigation, Software Security -> Sym
   journal   = {Future Generation Computer Systems},
   year="2018", 
   url_Paper= {https://doi.org/10.1016/j.future.2018.05.062},
-  keywords={Trusted Execution Environment}
+  keywords={Systems Security -> Trusted Execution Environment}
 }
 
 @inproceedings{Muntean18tauCFI,
@@ -487,7 +487,7 @@ keywords={Software Security -> Side Channel Mitigation, Software Security -> Sym
   Pages = {16--21},
   Year = {2018},
   url_Paper = {https://doi.org/10.1109/TrustCom/BigDataSE.2018.00013},
-  keywords = {Trusted Execution Environment}
+  keywords = {Systems Security -> Trusted Execution Environment}
 }
 
 @InProceedings{Celik18Saint,
@@ -577,7 +577,7 @@ keywords={Software Security -> Side Channel Mitigation, Software Security -> Sym
   pages = {35--41},
   year = 2017,
   url_Paper = {https://doi.org/10.1145/3141235.3141239},
-  keywords = {Android Security}
+  keywords = {Software Security -> Android Security}
 }
 
 @inproceedings{LiuTJ17Ptrsplit,
@@ -614,7 +614,7 @@ keywords={Software Security -> Side Channel Mitigation, Software Security -> Sym
   pages     = {262--271},
   year      = {2016},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/Android-partition.pdf},
-  keywords = {Android Security}
+  keywords = {Software Security -> Android Security}
 }
 
 @inproceedings{TanM16Bidir,
@@ -742,7 +742,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
   pages     = {165--176},
   year      = {2014},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/nativeguard.pdf},
-  keywords = {Android Security}
+  keywords = {Software Security -> Android Security}
 }
 
 @article{Sun13Tissec,
@@ -758,7 +758,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
   pages     = {9:1--9:28},
   year      = {2013},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/tissec13.pdf},
-  keywords = {Programming Languages -> Language Interoperation}
+  keywords = {Programming Languages -> Language Interoperation, Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @inproceedings{Zeng13Strato,
@@ -799,7 +799,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
   year = {2012},
   pages = {153--160},
   url_Paper ={https://doi.org/10.1109/MSN.2012.43},
-  keywords = {Android Security}
+  keywords = {Software Security -> Android Security}
 } 
 
 @inproceedings{NiuT12STC,
@@ -946,7 +946,7 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
  url_Paper = {http://www.cse.psu.edu/~gxt29/papers/robusta.pdf},
  url_Link = {http://www.cse.psu.edu/~gxt29/projects/gonative/},
  url_Slides = {http://www.cse.psu.edu/~gxt29/slides/RobustaCCS2010.pdf},
- keywords = {Programming Languages -> Language Interoperation}
+ keywords = {Programming Languages -> Language Interoperation, Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 @article{FPCC10TOPLAS,
@@ -974,7 +974,7 @@ keywords = {Formal Methods -> Program Verification}
  booktitle = {Conference on Electronic Voting Technology/Workshop on Trustworthy Elections (EVT/WOTE)},
  year = {2009},
  url_Paper = {https://www.usenix.org/legacy/events/evtwote09/tech/full_papers/appel.pdf},
- keywords = {Voting Machine Security}
+ keywords = {Systems Security -> Voting Machine Security}
 } 
 
 @inproceedings{Lopresti09ICDAR,
@@ -986,7 +986,7 @@ keywords = {Formal Methods -> Program Verification}
   booktitle = {10th International Conference on Document Analysis and Recognition (ICDAR)},
   pages     = {733--737},
   year      = {2009},
-  keywords = {Voting Machine Security}
+  keywords = {Systems Security -> Voting Machine Security}
 }
 
 @inproceedings{LiT09CCS,
@@ -1017,7 +1017,7 @@ title="Insecurities and Inaccuracies of the {Sequoia AVC Advantage} 9.00H {DRE} 
 month=Oct,
 year=2008,
 url_Paper="\url{http://citp.princeton.edu/voting/advantage/}{[paper]}",
-keywords = {Voting Machine Security}
+keywords = {Systems Security -> Voting Machine Security}
 }
 
 @inproceedings{TanM07ILEA,
