--- a/mypapers.bib
+++ b/mypapers.bib
@@ -316,8 +316,8 @@ keywords = {Formal Methods -> Parser Assurance}
   booktitle = {Annual Computer Security Applications Conference (ACSAC)},
   pages     = {584--597},
   year      = {2019},
-  keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)},
-  url_Paper = {https://doi.org/10.1145/3359789.3359806}
+  url_Paper = {https://doi.org/10.1145/3359789.3359806},
+  keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
 
 
@@ -330,7 +330,9 @@ keywords = {Formal Methods -> Parser Assurance}
                Xia Lei},
   title     = {TraceChain: a blockchain-based scheme to protect data confidentiality and traceability},
   journal   = {Software: Practice and Experience},
-  year      = {2019}
+  year      = {2019},
+  url_Paper = {https://onlinelibrary.wiley.com/doi/abs/10.1002/spe.2753},
+  keywords = {Systems Security}
 }
 
 @article{Fan19Dudup,
@@ -339,7 +341,8 @@ keywords = {Formal Methods -> Parser Assurance}
   journal   = {Future Generation Computer Systems},
   volume    = {101},
   pages     = {127--135},
-  year      = {2019}
+  year      = {2019},
+  keywords={Systems Security -> Trusted Execution Environment}
 }
 
 @ARTICLE{Celik19IoTMag, 
@@ -351,8 +354,8 @@ month={Sep.},
 volume={17}, 
 number={5}, 
 pages={30--37}, 
-keywords={IoT Security},
-url_Paper = {http://www.cse.psu.edu/~gxt29/papers/IoTSP.pdf}
+url_Paper = {http://www.cse.psu.edu/~gxt29/papers/IoTSP.pdf},
+keywords={IoT Security}
 }
 
 @article{Fan19Cloud,
@@ -366,7 +369,9 @@ url_Paper = {http://www.cse.psu.edu/~gxt29/papers/IoTSP.pdf}
   journal   = {Future Generation Computer Systems},
   volume    = {96},
   pages     = {376--385},
-  year      = {2019}
+  year      = {2019},
+  url_Paper = {https://www.sciencedirect.com/science/article/abs/pii/S0167739X18311002},
+  keywords = {Systems Security -> Trusted Execution Environment}
 }
 
 @Article{Celik19CSUR,
@@ -901,7 +906,8 @@ keywords = {Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
   booktitle = {8th International Conference on Autonomic and Trusted Computing (ATC)},
   pages     = {228--242},
   year      = {2011},
-  url_Paper = {https://doi.org/10.1007/978-3-642-23496-5_17}
+  url_Paper = {https://doi.org/10.1007/978-3-642-23496-5_17},
+  keywords = {Systems Security}
 }
 
 @article{KimHT11,
@@ -1040,7 +1046,8 @@ keywords = {Programming Languages -> Language Interoperation}
   pages     = {216--231},
   year      = {2006},
   url_Paper = {http://www.cse.psu.edu/~gxt29/papers/delayedfailure.pdf},
-  url_Slides = {http://www.cse.psu.edu/~gxt29/slides/IH06.pdf}
+  url_Slides = {http://www.cse.psu.edu/~gxt29/slides/IH06.pdf},
+  keywords = {Software Security}
 }
 
 @inproceedings{Tan06SafeJNI,
