--- a/mypapers.bib
+++ b/mypapers.bib
@@ -188,7 +188,7 @@ keywords = {Formal Methods -> Parser Assurance}
                Gang Tan and
                Jens Grossklags and
                Claudia Eckert},
-  title     = {{\(\rho\)}{FEM}: Efficient Backward-edge Protection Using Reversed Forward-edge Mappings},
+  title     = {rho{FEM}: Efficient Backward-edge Protection Using Reversed Forward-edge Mappings},
   booktitle = {Annual Computer Security Applications Conference (ACSAC)},
   pages     = {466--479},
   year      = {2020},
