--- a/mypapers.bib
+++ b/mypapers.bib
@@ -1,3 +1,32 @@
+
+@article{Sun22TDSC,
+  author    = {Cong Sun and Yuwan Ma and Dongrui Zeng and Gang Tan and Siqi Ma and  Yafei Wu},
+  title     = {muDep: Mutation-based Dependency Generation for Precise Taint Analysis on Android Native Code},
+  journal   = {IEEE Transactions on Dependable and Secure Computing},
+  pages     = {To appear},
+  year      = {2022},
+  keywords = {Software Security -> Android Security}
+}
+
+@inproceedings{Wang22ROSSF,
+ author = {Yu-Ping Wang and Xu-Qiang Hu and Zi-Xin Zou and Wende Tan and Gang Tan},
+ title = {{ROS-SF}: A Transparent and Efficient ROS Middleware using Serialization-Free Message},
+ booktitle = {23rd ACM/IFIP Middleware Conference},
+ pages = {To appear},
+ year = {2022},
+ keywords  = {Programming Languages}
+}
+
+@InProceedings{Kim22CC,
+  Title                    = {BinPointer: Towards Precise, Sound, and Scalable Binary-Level Pointer Analysis},
+  Author                   = {Sun Hyoung Kim and Cong Sun and Dongrui Zeng and Gang Tan},
+  Booktitle                = {ACM SIGPLAN 2022 International Conference Compiler Construction (CC)},
+  Year                     = {2022},
+  pages = {To appear},
+  Url_Paper                = {http://www.cse.psu.edu/~gxt29/papers/BinPointerCC22.pdf},
+  keywords = {Software Security -> Binary Code Analysis}
+}
+
 @InProceedings{Niari22ICSE,
     title={Fairness-aware Configuration of Machine Learning Libraries},
     author={Saeid Tizpaz-Niari and Ashish Kumar and Gang Tan and Ashutosh Trivedi},
