--- a/mypapers.bib
+++ b/mypapers.bib
@@ -1,7 +1,6 @@
-
 @article{Sun22TDSC,
   author    = {Cong Sun and Yuwan Ma and Dongrui Zeng and Gang Tan and Siqi Ma and  Yafei Wu},
-  title     = {muDep: Mutation-based Dependency Generation for Precise Taint Analysis on Android Native Code},
+  title     = {{muDep}: Mutation-based Dependency Generation for Precise Taint Analysis on Android Native Code},
   journal   = {IEEE Transactions on Dependable and Secure Computing},
   pages     = {To appear},
   year      = {2022},
@@ -10,7 +9,7 @@
 
 @inproceedings{Wang22ROSSF,
  author = {Yu-Ping Wang and Xu-Qiang Hu and Zi-Xin Zou and Wende Tan and Gang Tan},
- title = {{ROS-SF}: A Transparent and Efficient ROS Middleware using Serialization-Free Message},
+ title = {{ROS-SF}: A Transparent and Efficient {ROS} Middleware using Serialization-Free Message},
  booktitle = {23rd ACM/IFIP Middleware Conference},
  pages = {To appear},
  year = {2022},
