--- a/mypapers.bib
+++ b/mypapers.bib
@@ -1,3 +1,41 @@
+@InProceedings{Monjezi23ICSE,
+    title={Information-Theoretic Testing and Debugging of Fairness Defects in Deep Neural Networks},
+    author={Verya Monjezi and Ashutosh Trivedi and Gang Tan and Saeid Tizpaz-Niari},
+    booktitle = {45th International Conference on Software Engineering ({ICSE})},
+    pages = {To appear},
+    year={2023},
+    url_Paper = {https://tizpaz.github.io/icse2023-paper892.pdf},
+    keywords  = {ML Security}
+}
+
+@article{Norris22IotRepair,
+  author    = {Michael Norris and
+               Z. Berkay Celik and
+               Prasanna Venkatesh Rengasamy and
+               Shulin Zhao and
+               Patrick Drew McDaniel and
+               Anand Sivasubramaniam and
+               Gang Tan},
+  title     = {{IoTRepair}: Flexible Fault Handling in Diverse {IoT} Deployments},
+  journal   = {{ACM} Transactions on  Internet of Things},
+  volume    = {3},
+  number    = {3},
+  pages     = {22:1--22:33},
+  year      = {2022},
+  url_Paper = {http://www.cse.psu.edu/~gxt29/papers/IoTRepair_journal.pdf},
+  keywords = {IoT Security}
+}
+
+@InProceedings{Huang22OSDI,
+    title={KSplit: Automating Device Driver Isolation},
+    author={Yongzhe Huang and Vikram Narayanan and David Detweiler and Kaiming Huang and Gang Tan and Trent Jaeger and Anton Burtsev},
+    booktitle = {16th USENIX Symposium on Operating Systems Design and Implementation (OSDI'22)},
+    pages = {613--631},
+    year={2022},
+    url_Paper = {http://www.cse.psu.edu/~gxt29/papers/ksplit_osdi22.pdf},
+    keywords = {Software Security -> Privilege Separation}
+}
+
 @article{Sun22TDSC,
   author    = {Cong Sun and Yuwan Ma and Dongrui Zeng and Gang Tan and Siqi Ma and  Yafei Wu},
   title     = {{muDep}: Mutation-based Dependency Generation for Precise Taint Analysis on Android Native Code},
@@ -11,7 +49,7 @@
  author = {Yu-Ping Wang and Xu-Qiang Hu and Zi-Xin Zou and Wende Tan and Gang Tan},
  title = {{ROS-SF}: A Transparent and Efficient {ROS} Middleware using Serialization-Free Message},
  booktitle = {23rd ACM/IFIP Middleware Conference},
- pages = {To appear},
+ pages = {82--93},
  year = {2022},
  keywords  = {Programming Languages}
 }
@@ -21,7 +59,7 @@
   Author                   = {Sun Hyoung Kim and Cong Sun and Dongrui Zeng and Gang Tan},
   Booktitle                = {ACM SIGPLAN 2022 International Conference Compiler Construction (CC)},
   Year                     = {2022},
-  pages = {To appear},
+  pages = {169--180},
   Url_Paper                = {http://www.cse.psu.edu/~gxt29/papers/BinPointerCC22.pdf},
   keywords = {Software Security -> Binary Code Analysis}
 }
@@ -30,7 +68,7 @@
     title={Fairness-aware Configuration of Machine Learning Libraries},
     author={Saeid Tizpaz-Niari and Ashish Kumar and Gang Tan and Ashutosh Trivedi},
     booktitle = {44th International Conference on Software Engineering ({ICSE})},
-    pages = {To appear},
+    pages = {909--920},
     year={2022},
     url_Paper = {https://arxiv.org/pdf/2202.06196.pdf},
     keywords  = {ML Security}
@@ -40,7 +78,7 @@
     title={Building a Privacy-Preserving Smart Camera System}, 
     author={Yohan Beugin and Quinn Burke and Blaine Hoak and Ryan Sheatsley and Eric Pauley and Gang Tan and Syed Rafiul Hussain and Patrick McDaniel},
     booktitle = {Privacy Enhancing Technologies Symposium ({PETS})},
-    pages = {To appear},
+    pages = {25--46},
     year={2022},
     url_Paper = {https://arxiv.org/pdf/2201.09338.pdf},
     keywords  = {IoT Security}
@@ -145,7 +183,7 @@ keywords = {Formal Methods -> Parser Assurance}
   Title = {{MazeRunner}: Evaluating the Attack Surface of Control-Flow Integrity Policies },
   Author = {Dongrui Zeng and Ben Niu and Gang Tan},
   Booktitle = {20th IEEE International Conference On Trust, Security And Privacy In Computing And Communications (TrustCom)},
-  Pages = {To appear},
+  Pages = {810--821},
   Year = {2021},
   keywords = {Software Security -> Binary Code Analysis, Software Security -> Inlined Reference Monitors (CFI; SFI; etc.)}
 }
@@ -165,7 +203,7 @@ keywords = {Formal Methods -> Parser Assurance}
   Author                   = {Sun Hyoung Kim and Cong Sun and Dongrui Zeng and Gang Tan},
   Booktitle                = {Network and Distributed System Security Symposium (NDSS)},
   Year                     = {2021},
-  Url_Paper                = {http://www.cse.psu.edu/~gxt29/papers/cfgByDatalog_NDSS21.pdf},
+  Url_Paper                = {http://www.cse.psu.edu/~gxt29/papers/BPA_NDSS21.pdf},
   keywords = {Software Security -> Binary Code Analysis}
 }
 
@@ -185,7 +223,7 @@ keywords = {Formal Methods -> Parser Assurance}
   number    = {1},
   pages     = {14:1--14:26},
   year      = {2021},
-  Url_Paper = {https://doi.org/10.1145/3436730},
+  Url_Paper = {https://dl.acm.org/doi/10.1145/3436730},
   keywords = {Software Security -> Side Channel Mitigation, Hardware Security}
 }
 
