added new bib entries for 2022 papers

--- a/mypapers.bib
+++ b/mypapers.bib
@@ -1,3 +1,57 @@
+@inproceedings{Pauley22CNS,
+  author    = {Eric Pauley and
+               Gang Tan and
+               Danfeng Zhang and
+               Patrick D. McDaniel},
+  title     = {Performant Binary Fuzzing without Source Code using Static Instrumentation},
+  booktitle = {10th {IEEE} Conference on Communications and Network Security (CNS)},
+  pages     = {226--235},
+  year      = {2022},
+  url_Paper = {https://pauley.me/publication/2022/cns22/cns22.pdf},
+  keywords  = {Software Security}
+}
+
+@article{HuangTY22EAI,
+  author    = {Zhen Huang and
+               Gang Tan and
+               Xiaowei Yu},
+  title     = {Mitigating Vulnerabilities in Closed Source Software},
+  journal   = {{EAI} Endorsed Transactions on Security and Safety},
+  volume    = {8},
+  number    = {30},
+  pages     = {4},
+  year      = {2022},
+  url_Paper = {https://facsrv.cs.depaul.edu/zhuang28/Mitigating_Vulnerabilities_in_Closed_Source_Software.pdf},
+  keywords  = {Software Security -> Automated Program Repairs, Software Security -> Binary Code Analysis}
+}
+
+@article{Fan22SPE,
+  author    = {Yongkai Fan and
+               Xiaodong Lin and
+               Wei Liang and
+               Jinghan Wang and
+               Gang Tan and
+               Xia Lei and
+               Jing Lei},
+  title     = {{TraceChain}: a blockchain-based scheme to protect data confidentiality and traceability},
+  journal   = {Software: Practice and Experience},
+  volume    = {52},
+  number    = {1},
+  pages     = {115--129},
+  year      = {2022},
+  url_Paper = {https://onlinelibrary.wiley.com/doi/abs/10.1002/spe.2753},
+  keywords = {Systems Security}
+}
+
+@INPROCEEDINGS{SarracinoTM22LangSec,
+author={John Sarracino and Gang Tan and Greg Morrisett},
+title={Certified Parsing of Dependent Grammars},
+booktitle= {8th Workshop on Language-Theoretic Security (LangSec)},
+year={2022},
+url_Paper = {http://www.cse.psu.edu/~gxt29/papers/Sarracino_LangSec22.pdf},
+keywords = {Formal Methods -> Parser Assurance}
+}
+
 @InProceedings{Monjezi23ICSE,
     title={Information-Theoretic Testing and Debugging of Fairness Defects in Deep Neural Networks},
     author={Verya Monjezi and Ashutosh Trivedi and Gang Tan and Saeid Tizpaz-Niari},
@@ -387,19 +441,7 @@ keywords = {Formal Methods -> Parser Assurance}
 }
 
 
-@article{Fan19SPE,
-  author    = {Yongkai Fan and
-               Xiaodong Lin and
-               Gang Tan and
-               Wei Liang and
-               Jing Lei and
-               Xia Lei},
-  title     = {TraceChain: a blockchain-based scheme to protect data confidentiality and traceability},
-  journal   = {Software: Practice and Experience},
-  year      = {2019},
-  url_Paper = {https://onlinelibrary.wiley.com/doi/abs/10.1002/spe.2753},
-  keywords = {Systems Security}
-}
+
 
 @article{Fan19Dudup,
   author    = {Yongkai Fan and Xiaodong Lin and Wei Liang and Gang Tan and Priyadarsi Nanda},
